Issue #82 fix:Courses & Resources : Filters -> Placeholder for the filter fields are not clearly visible (light shade)

--- a/app/private/styles/views/filter.less
+++ b/app/private/styles/views/filter.less
@@ -63,4 +63,5 @@
      max-width: 100%; 
     margin: .45238095em 0 .45238095em .64285714em;
     line-height: 1.21428571em;
+    color:#908e90;
 }
